--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,10 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "camelcase": "off",
+    "import/prefer-default-export": "off",
+    "react/jsx-curly-newline": "off",
+    "react/no-array-index-key": "off",
     "no-use-before-define": "off",
     "no-unused-vars": "off",
     "no-console": "off",
